@@ -1,3 +1,4 @@
+    ADDED: action: Open With Menu - shortcut: CTRL + Enter
     ADDED: action: Open With... - shortcut: CTRL + O
     ADDED: mountman gui option: Show only removable devices
     ADDED: tabs have close buttons
